--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:theme="@style/Theme.FoodIt"
         tools:targetApi="31">
         <activity
-            android:name=".RecipeOverview"
+            android:name=".classes.activities.RecipeActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".classes.activities.RecipeOverviewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".classes.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
